--- a/client/app.json
+++ b/client/app.json
@@ -21,7 +21,7 @@
   "window": {
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#f4de3b",
-    "navigationBarTitleText": "同城拼车",
+    "navigationBarTitleText": "大厂潞城约车",
     "navigationBarTextStyle": "black",
     "enablePullDownRefresh": true
   },
